<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="title">"Title"</string>
<string name="category">"Category"</string>
<string name="intent_package">"Package to launch"</string>
<string name="fragment">"Settings Fragment to launch"</string>
<string name="choose_icon">"Click to choose icon"</string>
<string name="select_icon">"Select an icon"</string>
<string name="install_fm_error">"Please install a File Manager"</string>
<string name="setting_added">"Setting is saved"</string>
<string name="icon_by_app">"Select app icon"</string>
<string name="icon_by_fm">"Select from files"</string>
<string name="remove_tile">"Are you sure you want to remove this item?"</string>
<string name="apps">"Apps"</string>
<string name="settings">"Settings"</string>
<string name="trial_max_reached_title">"You have reached the maximum of five settings"</string>
<string name="trial_max_reached_text">"Please consider supporting me by buying the pro version"</string>
<string name="how_to_use">"How to use"</string>
<string name="how_to_use_desc">"Click the floating action button to add an item to your Android Settings. If you want to edit an item, just click it. Long click removes the setting"</string>
<string name="launch_settings_title">"Launch settings"</string>
<string name="launch_settings_text">"This will launch the settings in order to get a list of all the items"</string>
<string name="dialog_error">"Error while saving. Did you enter a category and did you not you enter something in both the package and fragment to launch field?"</string>
<string name="modify_columns">"Change amount of columns to"</string>
<string name="icons_only">"Only show icons in Settings"</string>
<string name="modify_icon_size">"Change icon size (pixels)"</string>
<string name="remove_icon_bg">"Remove icon background if present"</string>
<string name="installed_apps_icon">"Clicking app icon in InstalledAppDetails activity will launch app"</string>
<string name="color_filter_overlay">"Filter icon color with HTML color"</string>
<string name="reset">"Reset"</string>
<string name="reset_text">"This will reset all the modifications"</string>
<string name="show_package">"Show app package name in InstalledAppDetails activity"</string>
<string name="app_author">"App by wilco375"</string>
<string name="about">"About"</string>
<string name="contributors">"Contributors:"</string>
<string name="categories">"Categories"</string>
<string name="categories_desc">"Change the categories"</string>
<string name="tiles">"Items"</string>
<string name="tiles_desc">"Change the individual items"</string>
<string name="settings_desc">"Change general settings"</string>
<string name="remove_category">"Are you sure you want to remove this category? This will also delete all the items inside this category."</string>
<string name="dashboard">"Dashboard"</string>
<string name="app_details">"App info"</string>
<string name="hide_icon">"Hide launcher icon"</string>
<string name="background_color">"Background color"</string>
<string name="icon_by_list">"Select from list"</string>
<string name="exit">"Exit"</string>
<string name="permissions_needed_desc">"Settings Editor needs to access external storage to run correctly and to store configuration.
If you deny it, you won't be able to use the app."</string>
<string name="permissions_needed">"Permissions needed"</string>
<string name="permissions_denied">"Looks like you are running Android Marshmallow or higher, and that you denied some permissions.
Read/Write permissions are needed to save app data and config.
Please accept them or the app will not work."</string>
<string name="app_ready">"You're all set!"</string>
<string name="app_ready_desc">"The app is ready to be used!
Have fun :)"</string>
<string name="edit_settings">"Edit your settings easily"</string>
<string name="edit_settings_desc">"Change items, categories and tweak your settings!"</string>
<string name="xposed_desc">"Change items, categories and tweak your settings!"</string>
<string name="thanks_pro_intro">"Thanks a lot for your support!
You now have unlimited control of your settings!"</string>
<string name="pro_intro_title">"Pro Version"</string>
<string name="free_intro_title">"Free Version"</string>
<string name="limited_free_intro">"This version is limited to five modifications in your settings.
Try it out!"</string>
<string name="text_color">"Text color"</string>
<string name="backup">"Backup"</string>
<string name="backup_desc">"Backup or restore your current settings"</string>
<string name="restore">"Restore"</string>
<string name="backup_success">"Backup successfully made"</string>
<string name="backup_error">"Error while making backup, please try again"</string>
<string name="restore_success">"Backup successfully restored"</string>
<string name="restore_error">"Error while restoring backup, please try again"</string>
<string name="backup_delete">"Are you sure you want to delete this backup?"</string>
<string name="restore_confirm">"Are you sure you want to restore this backup?"</string>
<string name="restore_confirm_desc">"This will override the current configuration."</string>
<string name="hide_status_text">"Hide status text"</string>
<string name="xposed_not_active">"Xposed Module not activated"</string>
<string name="xposed_not_active_desc">"This Xposed Module doesn't seem to be activated. Please activate it to use the app"</string>
<string name="description">"Description"</string>
<string name="debug">"Debug mode"</string>
<string name="license_fail_title">"License check failed"</string>
<string name="license_fail_desc">"Application license is invalid (Error code %d). Please buy the application from the Google Play Store. If you believe this is an error, please contact me at support@wilco375.com"</string>
<string name="retry">"Retry"</string>
<string name="checking_license">"Checking license, please wait…"</string>
<string name="remove_free">"Uninstall Settings Editor"</string>
<string name="remove_free_desc">"Settings Editor Pro has detected that Settings Editor is still installed. Please uninstall this app by clicking next."</string>
<string name="hide_suggestions">"Hide suggestions"</string>
<string name="discard">"Do you want to discard all changes?"</string>
</resources>