<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.SettingsActivity"
    tools:showIn="@layout/activity_settings"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="4dp"
            android:layout_marginBottom="16dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:focusable="true"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:focusableInTouchMode="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dashboard"
                    android:textColor="#000"
                    android:layout_marginBottom="8dp"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1"
                    android:layout_marginBottom="8dp">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/modify_columns"
                        android:id="@+id/modifyColumnsCheckBox"/>

                    <EditText
                        android:layout_width="1dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/modifyColumnsEditText"
                        android:inputType="number"
                        android:layout_alignBaseline="@id/modifyColumnsCheckBox"
                        android:layout_toEndOf="@id/modifyColumnsCheckBox"
                        android:layout_toRightOf="@id/modifyColumnsCheckBox"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"/>

                </RelativeLayout>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/icons_only"
                    android:id="@+id/iconsOnlyCheckBox"
                    android:layout_marginBottom="8dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1"
                    android:layout_marginBottom="8dp">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/modify_icon_size"
                        android:id="@+id/modifyIconSizeCheckBox"/>

                    <EditText
                        android:layout_width="1dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/modifyIconSizeEditText"
                        android:inputType="number"
                        android:layout_alignBaseline="@id/modifyIconSizeCheckBox"
                        android:layout_toEndOf="@id/modifyIconSizeCheckBox"
                        android:layout_toRightOf="@id/modifyIconSizeCheckBox"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true" />
                </RelativeLayout>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remove_icon_bg"
                    android:id="@+id/removeIconBgCheckBox"
                    android:layout_marginBottom="8dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/color_filter_overlay"
                        android:id="@+id/iconFilterCheckBox"/>

                    <EditText
                        android:layout_width="1dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/iconFilterEditText"
                        android:inputType="textCapSentences"
                        android:layout_alignBaseline="@id/iconFilterCheckBox"
                        android:layout_toEndOf="@id/iconFilterCheckBox"
                        android:layout_toRightOf="@id/iconFilterCheckBox"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/background_color"
                        android:id="@+id/backgroundColorCheckBox"/>

                    <EditText
                        android:layout_width="1dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/backgroundColorEditText"
                        android:inputType="textCapSentences"
                        android:layout_alignBaseline="@id/backgroundColorCheckBox"
                        android:layout_toEndOf="@id/backgroundColorCheckBox"
                        android:layout_toRightOf="@id/backgroundColorCheckBox"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_color"
                        android:id="@+id/textColorCheckBox"/>

                    <EditText
                        android:layout_width="1dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/textColorEditText"
                        android:inputType="textCapSentences"
                        android:layout_alignBaseline="@id/textColorCheckBox"
                        android:layout_toEndOf="@id/textColorCheckBox"
                        android:layout_toRightOf="@id/textColorCheckBox"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true" />
                </RelativeLayout>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hide_status_text"
                    android:id="@+id/hideStatusText"
                    android:layout_marginBottom="8dp" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hide_suggestions"
                    android:id="@+id/hideSuggestions"
                    android:layout_marginBottom="8dp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/app_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="4dp"
            android:layout_marginBottom="16dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:focusable="true"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:focusableInTouchMode="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_details"
                    android:textColor="#000"
                    android:layout_marginBottom="8dp"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/installed_apps_icon"
                    android:id="@+id/installedAppsIconCheckBox"
                    android:layout_marginBottom="8dp" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_package"
                    android:id="@+id/showPackageCheckBox"
                    android:layout_marginBottom="8dp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:focusable="true"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:focusableInTouchMode="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="#000"
                    android:layout_marginBottom="8dp"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hide_icon"
                    android:id="@+id/hideIcon"
                    android:layout_marginBottom="8dp" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/debug"
                    android:id="@+id/debug"
                    android:layout_marginBottom="8dp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>
